Improved CMake check for CAPSimage library
As well as checking for the library and main header, we now
check for the newest function we need from it (CAPSSetRevolution).
This avoids a linker error with CAPSimage 5.0, and a confusing
"CAPSimage not found" message if an older version is installed.
4.x and older didn't use the CapsLibAll.h header we look for.

Also added -Wsuggest-override if it's supported, to suggest
places we should be using the override keyword on overridden
virtual functions. This helps spot signature mismatches.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,6 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
   add_definitions(-D_DEBUG)
 endif ()
 
-set(CAPSIMAGE ON CACHE BOOL "Enable CAPSImage")
-
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 if (COMPILER_SUPPORTS_CXX11)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -37,6 +35,11 @@ if (CMAKE_BUILD_TOOL MATCHES "make")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -pedantic")
 elseif (CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake)")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+endif ()
+
+CHECK_CXX_COMPILER_FLAG("-Wsuggest-override" COMPILER_SUPPORTS_WSUGGEST)
+if (COMPILER_SUPPORTS_WSUGGEST)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsuggest-override")
 endif ()
 
 if (APPLE)
@@ -97,12 +100,15 @@ if (BZIP2_FOUND)
   link_libraries(${BZIP2_LIBRARIES})
 endif ()
 
-if (CAPSIMAGE)
-  find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage ENV LD_LIBRARY_PATH)
-  find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h)
+find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage ENV LD_LIBRARY_PATH)
+if (CAPSIMAGE_LIBRARY)
+  message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
 
-  if (CAPSIMAGE_LIBRARY AND CAPSIMAGE_INCLUDE_DIR)
-    message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
+  find_path(CAPSIMAGE_INCLUDE_DIR caps/CapsLibAll.h)
+  set(CMAKE_REQUIRED_LIBRARIES ${CAPSIMAGE_LIBRARY})
+  check_function_exists(CAPSSetRevolution HAVE_CAPSSETREVOLUTION)
+
+  if (CAPSIMAGE_INCLUDE_DIR AND HAVE_CAPSSETREVOLUTION)
     add_definitions(-DHAVE_CAPSIMAGE)
     include_directories(${CAPSIMAGE_INCLUDE_DIR})
     if (APPLE)
@@ -112,9 +118,11 @@ if (CAPSIMAGE)
       link_libraries(${CAPSIMAGE_LIBRARY})
     endif ()
   else ()
-    message(STATUS "CAPSimage not found")
+    message(STATUS "CAPSimage is too old, version 5.1 or later required!")
   endif ()
-endif (CAPSIMAGE)
+else ()
+  message(STATUS "CAPSimage not found")
+endif ()
 
 if (APPLE)
   find_library(DA_FRAMEWORK DiskArbitration)
