Added SuperCard Pro device support for Linux and Mac
- added CMake detection of libftdi and libftd2xx
- renamed SuperCardProFTDI to SuperCardProFTD2XX
- added SuperCardProFTDI implementation using libftdi
- restored double-step support for SuperCard Pro devices
- moved includes to DeviceHDD.cpp due to scsi.h macro pollution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,24 @@ if (BZIP2_FOUND)
   link_libraries(${BZIP2_LIBRARIES})
 endif ()
 
+find_library(FTD2XX_LIBRARY NAMES ftd2xx ENV LD_LIBRARY_PATH)
+find_path(FTD2XX_INCLUDE_DIR ftd2xx.h)
+if (FTD2XX_LIBRARY AND FTD2XX_INCLUDE_DIR)
+  message(STATUS "Found FTD2XX: ${FTD2XX_LIBRARY}")
+  add_definitions(-DHAVE_FTD2XX)
+  include_directories(${FTD2XX_INCLUDE_DIR})
+  link_libraries(${FTD2XX_LIBRARY})
+endif ()
+
+find_library(FTDI_LIBRARY NAMES ftdi ENV LD_LIBRARY_PATH)
+find_path(FTDI_INCLUDE_DIR ftdi.h)
+if (FTDI_LIBRARY AND FTDI_INCLUDE_DIR)
+  message(STATUS "Found FTDI: ${FTDI_LIBRARY}")
+  add_definitions(-DHAVE_FTDI)
+  include_directories(${FTDI_INCLUDE_DIR})
+  link_libraries(${FTDI_LIBRARY})
+endif ()
+
 find_library(CAPSIMAGE_LIBRARY NAMES CAPSimage capsimage ENV LD_LIBRARY_PATH)
 if (CAPSIMAGE_LIBRARY)
   message(STATUS "Found CAPSimage: ${CAPSIMAGE_LIBRARY}")
