--- a/SAMdisk.vcxproj.filters
+++ b/SAMdisk.vcxproj.filters
@@ -288,6 +288,9 @@
     <ClCompile Include="src\types\trinload.cpp">
       <Filter>types</Filter>
     </ClCompile>
+    <ClCompile Include="src\SCP_FTD2XX.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\JupiterAce.h">
