Restored track normalisation during copy command
- track checks and fixes now apply to copy, rather than just scan
- restored Speedlock / Rainbow Arts weak sector copy count check and fix
- fixed duplicate data warning when data copy count is exceeded

--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="include\Image.h" />
     <ClInclude Include="include\ioapi.h" />
     <ClInclude Include="include\MemFile.h" />
+    <ClInclude Include="include\SpecialFormat.h" />
     <ClInclude Include="include\SpectrumPlus3.h" />
     <ClInclude Include="include\resource.h" />
     <ClInclude Include="include\SAMCoupe.h" />
