--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -58,6 +58,9 @@
       <WarningLevel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Level3</WarningLevel>
     </ClCompile>
     <ClCompile Include="src\cmd_list.cpp" />
+    <ClCompile Include="src\KF_libusb.cpp" />
+    <ClCompile Include="src\KF_WinUsb.cpp" />
+    <ClCompile Include="src\KryoFlux.cpp" />
     <ClCompile Include="src\MemFile.cpp" />
     <ClCompile Include="src\SCP_FTD2XX.cpp" />
     <ClCompile Include="src\SpectrumPlus3.cpp" />
@@ -113,6 +116,8 @@
     <ClCompile Include="src\types\hfe.cpp" />
     <ClCompile Include="src\types\imd.cpp" />
     <ClCompile Include="src\types\ipf.cpp" />
+    <ClCompile Include="src\types\kf_dev.cpp" />
+    <ClCompile Include="src\types\kf_stream.cpp" />
     <ClCompile Include="src\types\lif.cpp" />
     <ClCompile Include="src\types\mbd.cpp" />
     <ClCompile Include="src\types\mgt.cpp" />
@@ -125,7 +130,6 @@
     <ClCompile Include="src\types\sbt.cpp" />
     <ClCompile Include="src\types\scl.cpp" />
     <ClCompile Include="src\types\scp.cpp" />
-    <ClCompile Include="src\types\kryoflux.cpp" />
     <ClCompile Include="src\types\scp_dev.cpp" />
     <ClCompile Include="src\types\sdf.cpp" />
     <ClCompile Include="src\types\td0.cpp">
@@ -176,6 +180,9 @@
     <ClInclude Include="include\IBMPC.h" />
     <ClInclude Include="include\Image.h" />
     <ClInclude Include="include\ioapi.h" />
+    <ClInclude Include="include\KF_libusb.h" />
+    <ClInclude Include="include\KF_WinUsb.h" />
+    <ClInclude Include="include\KryoFlux.h" />
     <ClInclude Include="include\MemFile.h" />
     <ClInclude Include="include\SpecialFormat.h" />
     <ClInclude Include="include\SpectrumPlus3.h" />
@@ -287,8 +294,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared copy "$(TargetPath)" \Shared\</Command>
@@ -308,8 +315,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared\x64 copy "$(TargetPath)" \Shared\x64\</Command>
@@ -335,8 +342,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist C:\Utils\upx.exe C:\Utils\upx.exe --brute -9 "$(TargetPath)" -o "\Shared\$(TargetFileName)" -f
@@ -362,8 +369,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared\x64 copy "$(TargetPath)" \Shared\x64\
