--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -221,6 +221,7 @@
     <ProjectGuid>{DC06DE50-59A6-48C0-BFC6-DDC87B0CF364}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>SAMdisk</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -238,14 +239,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v140_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v140_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -275,9 +276,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\shared;$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\um;$(IncludePath)</IncludePath>
+    <LibraryPath>$(UCRTContentRoot)lib\$(WindowsTargetPlatformVersion)\um\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <LibraryPath>$(UCRTContentRoot)lib\$(WindowsTargetPlatformVersion)\um\$(PlatformTarget);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\shared;$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\um;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -295,7 +300,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>winusb.dll;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared copy "$(TargetPath)" \Shared\</Command>
@@ -316,7 +321,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>winusb.dll;ws2_32.dll;zlibwapi.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared\x64 copy "$(TargetPath)" \Shared\x64\</Command>
@@ -343,7 +348,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zdll.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>winusb.dll;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist C:\Utils\upx.exe C:\Utils\upx.exe --brute -9 "$(TargetPath)" -o "\Shared\$(TargetFileName)" -f
@@ -370,7 +375,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>winusb.lib;ws2_32.lib;setupapi.lib;zlibwapi.lib;bzip2.lib;CAPSImg.lib;ftd2xx.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <DelayLoadDLLs>winusb.lib;ws2_32.dll;zlib1.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
+      <DelayLoadDLLs>winusb.dll;ws2_32.dll;zlibwapi.dll;bzip2.dll;CAPSImg.dll;ftd2xx.dll</DelayLoadDLLs>
     </Link>
     <PostBuildEvent>
       <Command>@if exist \Shared\x64 copy "$(TargetPath)" \Shared\x64\
