--- a/SAMdisk.vcxproj
+++ b/SAMdisk.vcxproj
@@ -239,14 +239,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -276,13 +276,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\shared;$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\um;$(IncludePath)</IncludePath>
-    <LibraryPath>$(UCRTContentRoot)lib\$(WindowsTargetPlatformVersion)\um\$(PlatformTarget);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>$(UCRTContentRoot)lib\$(WindowsTargetPlatformVersion)\um\$(PlatformTarget);$(LibraryPath)</LibraryPath>
-    <IncludePath>$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\shared;$(UCRTContentRoot)Include\$(WindowsTargetPlatformVersion)\um;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
