Added support for CWTool disk images
Only support for index-synchronised images, for now. This is due to
assumptions made about where the track wrap will fall in the data.

--- a/SAMdisk.vcxproj.filters
+++ b/SAMdisk.vcxproj.filters
@@ -324,6 +324,9 @@
     <ClCompile Include="src\Range.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\types\cwtool.cpp">
+      <Filter>types</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\JupiterAce.h">
